--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -56,7 +56,7 @@
                                 <div>
                                     <img class="undercomment-icon" src="/static/css/img/undercomment.png" alt="대댓글">
                                     <span class="post-author">{{ undercomment.comment_author.nickname }}</span>
-                                    <span class="comment-content">{{ undercomment.comment_content }}</span>
+                                    <p class="comment-content">{{ undercomment.comment_content }}</p>
                                 </div>
                                 {% if undercomment.comment_author == request.user %}
                                 <div>
@@ -110,7 +110,7 @@
         element.innerHTML += `
         <div class="comment_${comment_id} comment-container">
             <div class=" d-flex justify-content-between">
-                <div>
+                <div class="d-flex align-items-center">
                     <span class="post-author">{{request.user.nickname}}</span>
                     <span class="comment-date">{{ now |date:"Y.m.d" }} </span>
                 </div>
@@ -120,7 +120,7 @@
                     <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
                 </div>
             </div>
-            <span class="comment-content">${comment_content}</span>
+            <p class="comment-content">${comment_content}</p>
         </div>
         <div class="undercomment_list_${comment_id}"></div>
         <div class="undercomment-container undercomment_${comment_id} d-flex align-items-center"></div>
@@ -134,7 +134,7 @@
         const element = document.querySelector(`.comment_${comment_id}`);
         element.innerHTML = ` 
             <div class=" d-flex justify-content-between">
-                <div>
+                <div class="d-flex align-items-center">
                     <span class="post-author">{{request.user.nickname}}</span>
                     <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
                 </div>
@@ -164,7 +164,7 @@
         const element = document.querySelector(`.comment_${comment_id}`);
         element.innerHTML = `
         <div class=" d-flex justify-content-between">
-            <div>
+            <div class="d-flex align-items-center">
                 <span class="post-author">${nickname}</span>
                 <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
             </div>
@@ -174,7 +174,7 @@
                 <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
             </div>
         </div>
-        <span class="comment-content">${comment_content}</span>
+        <p class="comment-content">${comment_content}</p>
         `;
     };
 
@@ -240,7 +240,7 @@
                     <div>
                         <img src="/static/css/img/undercomment.png" alt="대댓글">
                         <span class="post-author">${undercomment_author}</span>
-                        <span class="comment-content">${undercomment_content}</span>
+                        <p class="comment-content">${undercomment_content}</p>
                     </div>
                     <div>
                         <button class="light-button create-btn s-btn" onclick="editUnderComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
@@ -284,7 +284,7 @@
                 <div>
                     <img src="/static/css/img/undercomment.png" alt="대댓글">
                     <span class="post-author">{{ request.user.nickname }}</span>
-                    <span class="comment-content flex-grow-1">${undercomment_content}</span>
+                    <p class="comment-content flex-grow-1">${undercomment_content}</p>
                 </div>
                 <div>
                     <button class="light-button create-btn s-btn" onclick="editUnderComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
