--- a/static/css/components/post_list.css
+++ b/static/css/components/post_list.css
@@ -4,7 +4,9 @@
   border-radius: 14px;
   border: none;
   padding: 9px 0px 9px 12px;
+  outline: none;
 }
+
 .search-button {
   width: 14px;
   height: 14px;
