Style: QnA input과 button 사이 간격 수정

--- a/templates/foreign/question_list.html
+++ b/templates/foreign/question_list.html
@@ -15,7 +15,7 @@
                     <input class="search-input" placeholder="검색" name="q" value="{{q}}">
                     <button class="search-button" type="submit"><ion-icon name="search"></ion-icon></button>
                 </form>
-                <button class="light-button create-btn sm-btn" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
+                <button class="light-button create-btn sm-btn" style="margin-left:15px;" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
             </div>
         </div>
         <hr>
