TEST-98 Fix: QnA 띄어쓰기 있는 댓글대댓글 내용 전달 오류 해결

--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -138,7 +138,7 @@
                 </div>
                 <button class="blue-button create-btn s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
             </div>
-            <input class="edit-comment-input" type="text" id="edit_comment" value=${comment_content} />
+            <input class="edit-comment-input" type="text" id="edit_comment" value='${comment_content}' />
             `;
     };
 
