TEST-97 Design: post-header 설정

--- a/templates/country/question_detail.html
+++ b/templates/country/question_detail.html
@@ -9,7 +9,7 @@
             <button class="light-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
-        <div class="d-flex justify-content-between">
+        <div class="post-header d-flex justify-content-between">
             <span class="post-title">{{ question.question_title }}</span>
             <div class="d-flex justify-content-end">
                 {% if question.author.pk == user.pk %}
