--- a/static/css/components/post.css
+++ b/static/css/components/post.css
@@ -18,9 +18,11 @@
   border-style: none;
 }
 
+.post-header {
+  margin-bottom: 10px;
+}
 .post-title {
   font-size: 20px;
-  margin-bottom: 10px;
   font-weight: 500;
 }
 
