--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,7 @@
 @import "pages/certificate.css";
 @import "pages/myquestion.css";
 @import "pages/credit.css";
+@import "pages/wiki.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
