--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <header class="d-flex align-items-center flex-column">
         <div class="header d-flex justify-content-between align-items-center">
             <a href="{% url 'login:user_main' %}" class="header_logo"><img src="/static/css/img/header_logo.png" alt="header_logo"></a>
-            <div class="d-flex">
+            <div class="d-flex align-items-end">
                 <div class="d-flex">
                     <div>
                         <a class="text mg-right" href="{% url 'domestic:univ_list' %}">국내대학별</a>
