--- a/templates/domestic/domestic_base.html
+++ b/templates/domestic/domestic_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="d-flex justify-content-evenly ">
+<div class="d-flex ">
     <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
         <ul>
             <li><a href="{% url 'domestic:sister_list' domestic.pk %}">자매 결연 대학</a></li>
