--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -8,42 +8,57 @@
         </div>
     </div>
     <hr>
-    <div>
-        <div>
-            <p>1. 파견로의 지원방법</p>
+    <div class="wiki__content">
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>1. 파견로의 지원방법</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','apply')">수정</button>
+            </div>
             <pre>{{univ.away_apply}}</pre>  <!--textarea에 입력한대로 보여주는 pre tag-->
-            <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','apply')">수정</button>
-            <div>
-                <p>2. 필요 어학 점수</p>
-                <pre>{{univ.language_score}}</pre>
-                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','language_score')">수정</button>
-            </div>
-            <div>
-                <p>3. 수강신청방법</p>
-                <pre>{{univ.course_enroll}}</pre>
-                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','course_enroll')">수정</button>
-            </div>
-            <div>
-                <p>4. 기숙사 정보</p>
-                <pre>{{univ.accommodation}}</pre>
-                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','accommodation')">수정</button>
-            </div>
-            <div>
-                <p>5. 학교 분위기</p>
-                <pre>{{univ.atmosphere}}</pre>
-                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','atmosphere')">수정</button>
-            </div>
-            <div>
-                <p>6. 동아리</p>
-                <pre>{{univ.club}}</pre>
-                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','club')">수정</button>
-            </div>
-            <div>
-                <p>7. 장학금</p>
-                <pre>{{univ.away_scholarship}}</pre>
-                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','away_scholarship')">수정</button>
-            </div>
         </div>
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>2. 필요 어학 점수</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','language_score')">수정</button>
+            </div>
+            <pre>{{univ.language_score}}</pre>
+        </div>
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>3. 수강신청방법</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','course_enroll')">수정</button>
+            </div>
+            <pre>{{univ.course_enroll}}</pre>
+        </div>
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>4. 기숙사 정보</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','accommodation')">수정</button>
+            </div>
+            <pre>{{univ.accommodation}}</pre>
+        </div>
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>5. 학교 분위기</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','atmosphere')">수정</button>
+            </div>
+            <pre>{{univ.atmosphere}}</pre>
+        </div>
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>6. 동아리</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','club')">수정</button>
+            </div>
+            <pre>{{univ.club}}</pre>
+        </div>
+        <div class="wiki__li">
+            <div class="wiki__li-title">
+                <h4>7. 장학금</h4>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','away_scholarship')">수정</button>
+            </div>
+            <pre>{{univ.away_scholarship}}</pre>
+        </div>
+        
     </div>
 </div>
 
