--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -52,7 +52,7 @@
                 <p class="p-position">멋쟁이</p>
                 <p class="p-name">양정연</p>
                 <div class="p-border"></div>
-                <p class="p-content">코딩 배우러 들어온 동아리에서 디자인하기🤪~<br>
+                <p class="p-content">코딩 배우러 들어온 동아리에서 디자인하기~🤪<br>
                     좋은 팀원들 만나 호강하고 갑니다!</p>
             </div>
         </div>
