--- a/templates/country/country_base.html
+++ b/templates/country/country_base.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     
+    <div class="d-flex">
         <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center"
             style="width:200px; height:150px;">
             <ul>
@@ -10,6 +11,7 @@
                 <li><a href="{% url "country:country_univ" country.pk%}">학교 목록</a></li>
             </ul>
         </div>
+        {% block contents %}
         {% endblock %}
     </div>
 
