--- a/templates/base.html
+++ b/templates/base.html
@@ -44,12 +44,10 @@
             {% endif %}
         </div>
     </header>
-    {% block content %}
-    {% endblock %}
-
-    {% block extra %}
-    {% endblock %}
-
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
     <footer>
         <div class="container">
             <div class="footer__sitemap">
@@ -101,6 +99,9 @@
         </div>
     </footer>
 
+
+    {% block extra %}
+    {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
