Auto stash before merge of "feature/design_jimin" and "origin/feature/design_duck"

--- a/templates/domestic/domestic_base.html
+++ b/templates/domestic/domestic_base.html
@@ -10,7 +10,9 @@
                 <li><a href="{% url 'domestic:credit_list' domestic.pk %}">파견교별 학점컷</a></li>
             </ul>
         </div>
-        {% block contents %}
-        {% endblock %}
+    <div>
+    {% block contents %}
+    {% endblock %}
     </div>
+</div>
 {% endblock %}
