TEST-102 Style: 위키 수정 CSS 모두 적용

--- a/static/css/pages/wiki.css
+++ b/static/css/pages/wiki.css
@@ -17,3 +17,12 @@
   display: flex;
   justify-content: space-between;
 }
+.wiki__content textarea {
+  border: none;
+  border-radius: 10px;
+  height: 275px;
+  margin-bottom: 70px;
+}
+textarea:focus {
+  outline: none;
+}
