TEST-8 Style: 파견교 후기 대댓글 input/각 comment 사이 간격 조절

--- a/static/css/pages/review_detail.css
+++ b/static/css/pages/review_detail.css
@@ -55,3 +55,9 @@
 .post-content-padding {
   padding-bottom: 170px;
 }
+.post-comment-padding {
+  padding-bottom: 25px;
+}
+.post-input-margin {
+  margin-bottom: 20px;
+}
