TEST-8 Style: 후기 list hr mb 변경

--- a/static/css/pages/review_list.css
+++ b/static/css/pages/review_list.css
@@ -36,3 +36,8 @@
 .review-list .fa-chevron-left {
   color: var(--m-gray);
 }
+
+.review-list-hr {
+  margin-top: 40px;
+  margin-bottom: 15px !important;
+}
