--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -8,7 +8,7 @@
         </div>
         <a class="country-btn light-button" href="{% url "foreign:review_create" univ.pk%}">글쓰기</a>
     </div>
-    <hr>
+    <hr class="review-list-hr">
     <table>
         <tr align='center'>
             <th width='70'>번호</th>
