--- a/templates/foreign/question_search.html
+++ b/templates/foreign/question_search.html
@@ -42,7 +42,7 @@
         <p align='center'>검색 결과가 없습니다.</p>
         {% endif %}
     
-        <div class="pagination d-flex justify-content-center">
+        <div class="pagination qna-pagination d-flex justify-content-center">
             <div>
                 {% if page_obj.has_previous %}
                     <a class="abutton" href="?page1={{ bpage_obj.previous_page_number }}"><i class="fas fa-chevron-left"></i></a>
