--- a/templates/country/country_base.html
+++ b/templates/country/country_base.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block style %}
+<script src="https://kit.fontawesome.com/67d418f4de.js" crossorigin="anonymous"></script>
+{% endblock %}
 {% block content %}
     
     <div class="d-flex">
