--- a/templates/domestic/domestic_base.html
+++ b/templates/domestic/domestic_base.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block style %}
+<script src="https://kit.fontawesome.com/67d418f4de.js" crossorigin="anonymous"></script>
+{% endblock %}
 {% block content %}
 <div class="d-flex">
     <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
