--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -31,7 +31,7 @@
         <h6>첫 번째로 정보를 등록해주세요!</h6>
     </div>
     {% endif %}
-    <div style="text-align:center ">
+    <div class="review-pagination-top">
         <div class="pagination  d-flex justify-content-center">
             <div>
             {% if page_obj.has_previous %}
