--- a/static/css/pages/review_list.css
+++ b/static/css/pages/review_list.css
@@ -41,3 +41,8 @@
   margin-top: 40px;
   margin-bottom: 15px !important;
 }
+
+.review-pagination-top {
+  text-align: center;
+  margin-top: 20px;
+}
