--- a/templates/foreign/question_search.html
+++ b/templates/foreign/question_search.html
@@ -3,7 +3,7 @@
 <div class="container2 category-detail post-list">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-end">
-                <h3>{{ univ.away_name }}</h3>
+                <h3 style="max-width: 575px;">{{ univ.away_name }}</h3>
                 <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
             </div>
             <div class="d-flex justify-content-end">
