--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -79,12 +79,12 @@
         {%endif%}
     </div>
 
-    <form action="./comment_create/" method="POST" class="d-flex justify-content-between align-items-end">
+    <div class="d-flex justify-content-between align-items-end">
         {% csrf_token %}
         <input class="new-comment-input flex-grow-1" type="text" name="comment_content" id="comment_{{review.id}}" placeholder='답변 달기...' style="width: 80%;"/>
-        <span class="blue-button create-btn s-btn post-button submit" type="submit" class="blue-button review-detail-submitbtn" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">등록</span>
+        <div class="blue-button create-btn s-btn post-button submit" type="submit" class="blue-button review-detail-submitbtn" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">등록</div>
         <!-- 이유는 모르겠으나 위의 버튼이 div,span가 아닌 button,input이면 오류가 남,,, -->
-    </form>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -179,7 +179,8 @@
             <div>
                 <button class="light-button create-btn s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
                 <button class="light-button create-btn s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
-                <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
+                <button class="light-button create-btn s-btn post-button" id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
+                
             </div>
         </div>
         <span class="comment-content">${comment_content}</span>
