TEST-118 Fix : 대댓글 문제 1차 커밋

--- a/static/css/pages/review_detail.css
+++ b/static/css/pages/review_detail.css
@@ -61,3 +61,11 @@
 .post-input-margin {
   margin-bottom: 20px;
 }
+
+.post-reinput-margin {
+  width: 100%;
+  margin-bottom: 14px;
+}
+.post-reinput-margin input {
+  width: 87%;
+}
