TEST-118 Fix: 버튼 크기 통일

--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -178,9 +178,9 @@
                 <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
             </div>
             <div>
-                <button class="light-button create-btn s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
-                <button class="light-button create-btn s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
-                <button class="light-button create-btn s-btn post-button" id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
+                <button class="light-button  s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
+                <button class="light-button  s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
+                <button class="light-button  s-btn post-button" id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
                 
             </div>
         </div>
