--- a/templates/domestic/wiki_edit.html
+++ b/templates/domestic/wiki_edit.html
@@ -9,21 +9,26 @@
         <hr>
         <form action="" method="POST" enctype="multipart/form-data" class="table">
             {% csrf_token %}
-            <div class="d-flex justify-content-between align-items-center wiki__li-title">
             {% for field in form %}
-            {% if btn == forloop.counter%}
-                {%if field.name == 'home_apply'%} <h4>1.지원 방법</h4>  {%endif%}
-                {%if field.name == 'home_document'%}<h4>2.필요 서류</h4>   {%endif%}
-                {%if field.name == 'semester'%} <h4>3.수학 가능 학기</h4>  {%endif%}
-                {%if field.name == 'home_scholarship'%} <h4> 4.교내 장학금 정보</h4> {%endif%}
-                {%if field.name == 'insurance'%} <h4>5.유학생 보험 준비</h4> {%endif%}
-                <input class="blue-button m-btn" type="submit" value="저장하기" onclick="onClickEditWiki()"/>
-            </div>
-            <div class="form-group">
-                <textarea type="{{ field.field.widget.textarea_type }}" class="form-control"
-                    id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" 	cols = "100" rows="20" >{{field.value}}</textarea>
-            </div>
-            {%endif%}
+                {% if type == field.name %}
+                    <div class="d-flex justify-content-between align-items-center wiki__li-title">
+                        {%if type == 'home_apply'%} <h4>1.지원 방법</h4>  {%endif%}
+                        {%if type == 'home_document'%}<h4>2.필요 서류</h4>   {%endif%}
+                        {%if type == 'semester'%} <h4>3.수학 가능 학기</h4>  {%endif%}
+                        {%if type == 'home_scholarship'%} <h4> 4.교내 장학금 정보</h4> {%endif%}
+                        {%if type == 'insurance'%} <h4>5.유학생 보험 준비</h4> {%endif%}
+                        <input class="blue-button m-btn" type="submit" value="저장하기" onclick="onClickEditWiki()"/>
+                    </div>
+                    <div class="form-group">
+                        <textarea type="{{ field.field.widget.textarea_type }}" class="form-control"
+                            id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" 	cols = "100" rows="20" >{{field.value}}</textarea>
+                    </div>
+                {% else %}
+                    <div class="form-group">
+                        <textarea type="{{ field.field.widget.textarea_type }}" class="form-control "
+                            id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" readonly style="display:none" cols = "100" rows="20" >{{field.value}}</textarea>
+                    </div>
+                {% endif %}
             {% endfor %}
         </form>
 {% endblock %}
