TEST-127 Fix: 국가-위키 항목 코드 합치기

--- a/templates/country/country_wiki.html
+++ b/templates/country/country_wiki.html
@@ -56,7 +56,7 @@
             window.location.href='{% url "login:login" %}';
         }else{
            
-            var view=`/country/wiki/edit_${str}/`           //url 연결
+            var view=`/country/wiki/${str}/`           //url 연결
         
             window.location.href=view+'{{country.pk}}'
 
