--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -28,10 +28,9 @@
                         id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" 	cols = "100" rows="20" >{{field.value}}</textarea>
                 </div>
             {% else %}
-                    <div class="form-group">
-                        <textarea type="{{ field.field.widget.textarea_type }}" class="form-control "
-                            id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" readonly style="display:none" cols = "100" rows="20" >{{field.value}}</textarea>
-                    </div>
+                <div class="form-group">
+                    <textarea type="{{ field.field.widget.textarea_type }}" class="form-control " id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" readonly style="display:none" cols = "100" rows="20" >{{field.value}}</textarea>
+                </div>
             {% endif %}
         {% endfor %}
 
